# invoke

./: .dockerignore  .editorconfig  .env.example  .env.sample  .gitignore  .prettierignore  AGENTS.md  README.md  SECURITY.md  docker-compose.yml  ecosystem.config.js  nginx.conf  package-lock.json  package.json  setup.bat  setup.sh  start.js  tsconfig.base.json
invoke-runtime/: Dockerfile  build.sh  meson.build  package.json  tsconfig.json
invoke-runtime/sdks/dotnet/: Invoke.SDK.sln
invoke-runtime/sdks/dotnet/Invoke.SDK/: ILLink.Descriptors.xml  Invoke.SDK.csproj  README.md
invoke-runtime/sdks/dotnet/Invoke.SDK.SourceGenerator/: EntryPointGenerator.cs  Invoke.SDK.SourceGenerator.csproj
invoke-runtime/sdks/dotnet/Invoke.SampleApp/: App.cs  Invoke.SampleApp.csproj
invoke-runtime/src/: console-bridge.ts  environment.ts  index.ts  kv-client.ts  protocol.ts  realtime-client.ts  request-response.ts  supervisor.ts  worker-main.ts  worker.ts
invoke-runtime/src/types/: chroot.d.ts
invoke-runtime/supervisor/: .gitignore  build.sh  meson.build
invoke-runtime/supervisor/src/: cgroup.cpp  cgroup.h  main.cpp  protocol.cpp  protocol.h  sandbox.cpp  sandbox.h  supervisor.cpp  supervisor.h
invoke-runtime/types/: README.md  package-lock.json  package.json  test.ts  tsconfig.json
invoke-runtime/types/scripts/: build-ambient.ts  build.js
invoke-runtime/worker/: package.json  tsconfig.json
invoke-runtime/worker/src/: console-bridge.ts  environment.ts  index.ts  protocol.ts  router.ts  run_build.ts  run_execute.ts  sleep.ts  sql.ts
invoke-runtime/worker/src/buildSysten/: index.ts  runner.ts  types.ts
invoke-runtime/worker/src/builder/: index.ts  runner.ts  types.ts  utils.ts
invoke-runtime/worker/src/kv/: client.ts  (+1 more)
(+861 files in other folders)
